# Incrementers

./: Counter.cs  Counter[TValue, TDecision].cs  Counter[TValue].cs  Incrementer.cs  Incrementer[TValue, TDecision].cs  Incrementer[TValue].cs  Platform.Counters.csproj  Platform.Counters.sln  Platform.Incrementers.csproj  Platform.Incrementers.sln  README.html  README.md  index.html  index.json  manifest.json  toc.html  xrefmap.yml
api/: Platform.Counters.Counter-1.html  Platform.Counters.Counter-2.html  Platform.Counters.Counter.html  Platform.Counters.html  Platform.Incrementers.IIncrementer-1.html  Platform.Incrementers.IIncrementer.html  Platform.Incrementers.Incrementer-1.html  Platform.Incrementers.Incrementer-2.html  Platform.Incrementers.Incrementer.html  Platform.Incrementers.html  toc.html
cpp/: CMakeLists.txt  LinksPlatform.cmake
cpp/Platform.Incrementers/: CMakeLists.txt  IIncrementer.h  IIncrementer[TNumber].h  Incrementer.h  Incrementer[TValue, TDecision].h  Incrementer[TValue].h  Platform.Incrementers.h
cpp/Platform.Incrementers.Tests/: CMakeLists.txt  IncrementerTests.cpp
csharp/: README.html  index.html  index.json  manifest.json  toc.html
csharp/Platform.Incrementers/: IIncrementer.cs  IIncrementer[TNumber].cs  Incrementer.cs  Incrementer[TValue].cs  Platform.Incrementers.csproj
csharp/Platform.Incrementers.Tests/: IncrementerTests.cs  Platform.Incrementers.Tests.csproj
csharp/api/: Platform.Incrementers.IIncrementer-1.html  Platform.Incrementers.IIncrementer.html  Platform.Incrementers.Incrementer-1.html  Platform.Incrementers.html  (+2 more)
